--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,22 @@ code {
     monospace;
 }
 
-html, body, #root {
+html, body, #root, #root > div {
   height: 100%;
+}
+
+.container {
+  height: calc(100% - 56px);
+}
+
+.not-found-image {
+  width: 100%;
+  height: 100%;
+}
+
+.not-found-image > img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto auto;
 }
